# ansambel

./: .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  LICENSE  README.md  commitlint.config.js  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md
.github/workflows/: ci.yml  journal.yml
.husky/: commit-msg  pre-commit  pre-push
docs/adr/: 0001-tech-stack.md
docs/superpowers/notes/: streaming-cadence.md
docs/superpowers/plans/: 2026-04-17-ansambel-phase-0-foundation.md  2026-04-17-ansambel-phase-1a-backend.md  2026-04-17-ansambel-phase-1a-frontend.md  2026-04-17-ansambel-phase-1b-backend.md  2026-04-17-ansambel-phase-1b-frontend.md  2026-04-17-ansambel-phase-1c-backend.md  2026-04-17-ansambel-phase-1c-frontend.md  (+1 more)
journal/: 2026-04-27.md
src/: App.svelte  App.test.ts  app.css
src-tauri/: .cargo-llvm-cov.toml  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  ids.rs  lib.rs  logging.rs  main.rs  panic.rs  state.rs
src-tauri/src/commands/: agent.rs  agent_core.rs  agent_stream.rs  helpers.rs  mod.rs  repo.rs  system.rs  task.rs  workspace.rs
src-tauri/src/persistence/: atomic.rs  debounce.rs  message_writer.rs  messages.rs  mod.rs  repos.rs  settings.rs  tasks.rs  workspaces.rs
src-tauri/src/platform/: binary.rs  mod.rs  paths.rs  pty.rs
src/lib/: ipc.test.ts  ipc.ts  keyboard.test.ts  keyboard.ts  themes.test.ts  themes.ts  types.test.ts  types.ts
tests/e2e/: smoke.spec.ts
(+44 files in other folders)
