[package]
name = "ansambel"
version = "0.1.0-pre"
description = "Orchestrate your AI ensemble"
authors = ["Handoko Beni <benihandoko@student.upi.edu>"]
edition = "2021"
rust-version = "1.82"
license = "MIT"

[lib]
name = "ansambel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.5", features = [] }
tauri-plugin-opener = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
which = "7"
dunce = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
directories = "5"
nanoid = "0.4"

[dev-dependencies]
tempfile = "3"
rstest = "0.23"
mockall = "0.13"
tokio-test = "0.4"
proptest = "1"
